--- a/src/styles.css
+++ b/src/styles.css
@@ -14,3 +14,15 @@ p {
     margin: 10vh;
     padding: 10vh;
 }
+
+.flex-container {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+
+.flex-container>div {
+    background-color: gray;
+    margin: 10vh;
+    padding: 20vh;
+}
