--- a/src/html/mother.css
+++ b/src/html/mother.css
@@ -4,6 +4,5 @@
 
 .grid-container {
     display: grid;
-    grid-template-columns: auto auto auto;
-    padding: 10px;
+    grid-template-columns: 426 426 426;
   }
