--- a/src/html/mother.css
+++ b/src/html/mother.css
@@ -46,17 +46,6 @@
 	cursor:pointer;
 }
 
-#spritebox{
-	
-	/*Sets size*/
-	max-width: 45%;
-	
-	/*Positioning in container*/
-	z-index: -1;
-	position: absolute;
-	bottom: 20%; 
-}
-
 .rightalign{
 	/*Right alignment class for the sprite*/
 	right: -7%;
@@ -70,5 +59,5 @@
 
 #spritebox img{
 	/*Ensures that image doesn't exceed box size*/
-	max-width:100%;
+	scale: 500%;
 }
