--- a/src/html/mother.css
+++ b/src/html/mother.css
@@ -1,3 +1,9 @@
+.final-text {
+	display:flexbox;
+	text-align:left;
+	padding-right:50%;
+}
+
 .grid-container {
     display: grid;
     grid-template-columns: 400px 400px 400px;
