--- a/src/html/mother.css
+++ b/src/html/mother.css
@@ -1,7 +1,9 @@
 .final-text {
 	display:flexbox;
 	text-align:left;
-	padding-right:50%;
+	margin-right: 50%;
+	margin-top: 20%;
+	margin-left: 15;
 }
 
 .grid-container {
