--- a/src/html/mother.css
+++ b/src/html/mother.css
@@ -1,9 +1,9 @@
 .final-text {
 	display:flexbox;
 	text-align:left;
-	margin-right: 50%;
-	margin-top: 20%;
-	margin-left: 15;
+	margin-right: 55%;
+	margin-top: 10%;
+	margin-left: 15%;
 }
 
 .grid-container {
