--- a/src/html/mother.css
+++ b/src/html/mother.css
@@ -1,9 +1,9 @@
 .final-text {
-	display:flexbox;
+	display:block;
 	text-align:left;
 	margin-right: 55%;
 	margin-top: 10%;
-	margin-left: 15%;
+	margin-left: 10%;
 }
 
 .grid-container {
