--- a/src/html/mother.css
+++ b/src/html/mother.css
@@ -10,7 +10,7 @@
     display: grid;
     grid-template-columns: 400px 400px 400px;
 	grid-template-rows: 230px 230px auto;
-    gap: 20px
+    gap: 20px;
   }
 
   .clickyflor {
